--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -58,7 +58,7 @@ ion-menu.md ion-item.selected ion-icon {
 }
 
 ion-menu.md ion-item ion-icon {
-  color: #616e7e;
+  color: #3c0ee2;
 }
 
 ion-menu.md ion-item ion-label {
