--- a/src/app/category/category.page.html
+++ b/src/app/category/category.page.html
@@ -1,9 +1,82 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>category</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Category</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Faven</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <div size="auto">
+          1 of 2
+      </div>
+    </ion-col>
+      <ion-col>
+        <div size="auto">
+          2 of 2
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div size="auto">
+          1 of 3
+        </div>
+      </ion-col>
+      <ion-col>
+        <div size="auto">
+          2 of 3
+        </div>
+      </ion-col>
+      <ion-col>
+        <div size="auto">
+          3 of 3
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col style="text-align: center;">
+          Chinese
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div size="auto">
+          1 of 3
+        </div>
+      </ion-col>
+      <ion-col>
+        <div size="auto">
+          2 of 3
+        </div>
+      </ion-col>
+      <ion-col>
+        <div size="auto">
+          3 of 3
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div size="auto">
+          1 of 2
+      </div>
+    </ion-col>
+      <ion-col>
+        <div size="auto">
+          2 of 2
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
