--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,46 +26,42 @@
   </ion-header>
 
   <ion-card href="fourth" target="_parent">
-    <ion-card-header color="primary">
+    <ion-card-header>
       <ion-card-subtitle>Cuisine</ion-card-subtitle>
-      <ion-card-title>Zomato Serivice</ion-card-title>
+      <ion-card-title>Select a cuisine of your choice</ion-card-title>
     </ion-card-header>
     <ion-card-content style="color: brown;">
       <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
-      Select a cuisine of your choice
     </ion-card-content>
 </ion-card>
 
 <ion-card href="third" target="_parent">
-  <ion-card-header color="primary">
+  <ion-card-header>
     <ion-card-subtitle>Cuisine</ion-card-subtitle>
-    <ion-card-title>Zomato Serivice</ion-card-title>
+    <ion-card-title>Select a cuisine of your choice</ion-card-title>
   </ion-card-header>
   <ion-card-content>
     <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
-    Select a cuisine of your choice
   </ion-card-content>
 </ion-card>
 
 <ion-card href="first" target="_parent">
-  <ion-card-header  color="primary">
+  <ion-card-header>
     <ion-card-subtitle>Cuisine</ion-card-subtitle>
-    <ion-card-title>Zomato Serivice</ion-card-title>
+    <ion-card-title>Select a cuisine of your choice</ion-card-title>
   </ion-card-header>
   <ion-card-content>
     <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
-    Select a cuisine of your choice
   </ion-card-content>
 </ion-card>
 
 <ion-card href="second" target="_parent">
-  <ion-card-header color="primary">
+  <ion-card-header>
     <ion-card-subtitle>Cuisine</ion-card-subtitle>
-    <ion-card-title>Zomato Serivice</ion-card-title>
+    <ion-card-title>Select a cuisine of your choice</ion-card-title>
   </ion-card-header>
   <ion-card-content>
     <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
-    Select a cuisine of your choice
   </ion-card-content>
 </ion-card>
 </ion-content>
