--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -43,11 +43,11 @@ ion-fab-button {
   --background-focused-opacity: 1;
   --background-hover: #49ff38;
   --background-hover-opacity: 1;
-  --border-color: #0faa6a;
+  --border-color: #ff1eda;
   --border-radius: 40%;
   --border-style: solid;
-  --border-width: 8px;
-  --box-shadow: 10px 10px;
+  --border-width: 3px;
+  --box-shadow: 0px 0px;
   --color: #ffffff;
   --color-activated: #3880ff;
   --color-focused: #3880ff;
@@ -60,10 +60,15 @@ ion-fab-button {
   --transition: background-color 15ms linear;
 }
 ion-card {
-  --background: #1aacd1;
-  --color: #3880ff;
+  --background: hsl(180, 100%, 50%);
+  --color: #56e41e;
 }
-
+ion-card-title {
+  --color: #000000;
+}
+ion-card-subtitle {
+  --color: #000000;
+}
 ion-searchbar {
   --background: #0be6c8;
   --cancel-button-color: #3880ff;
@@ -74,4 +79,30 @@ ion-searchbar {
   --placeholder-font-style: initial;
   --placeholder-font-weight: 900;
   --placeholder-opacity: 0.5;
+}
+
+ion-toolbar {
+  --background: #0be6c8;
+  --border-color: #3880ff;
+  --border-style: solid;
+  --border-width: 6px;
+  --color: #0be6c8;
+  --min-height: 56px;
+  --opacity: 1;
+  --padding-bottom: 4px;
+  --padding-end: 0px;
+  --padding-start: 4px;
+  --padding-top: 4px;
+}
+
+ion-content {
+  --background: #000000;
+  --color: #3880ff;
+  --keyboard-offset: 0px;
+  --offset-bottom: 0px;
+  --offset-top: 0px;
+  --padding-bottom: 0px;
+  --padding-end: 0px;
+  --padding-start: 0px;
+  --padding-top: 0px;
 }
