--- a/src/app/category/category.page.html
+++ b/src/app/category/category.page.html
@@ -8,73 +8,114 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Faven</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
 
   <ion-grid fixed>
     <ion-row>
       <ion-col>
-        <div size="auto">
+        <div id="region">
+          Indian
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div id="tooltips" size="auto">
           1 of 2
       </div>
     </ion-col>
       <ion-col>
-        <div size="auto">
+        <div size="auto" id="tooltips">
           2 of 2
         </div>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <div size="auto">
+        <div size="auto" id="tooltips">
           1 of 3
         </div>
       </ion-col>
       <ion-col>
-        <div size="auto">
+        <div id="tooltips" size="auto">
           2 of 3
         </div>
       </ion-col>
       <ion-col>
-        <div size="auto">
+        <div size="auto" id="tooltips">
           3 of 3
         </div>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col style="text-align: center;">
+      <ion-col>
+        <div id="region">
           Chinese
+        </div>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <div size="auto">
+        <div size="auto" id="tooltips">
           1 of 3
         </div>
       </ion-col>
       <ion-col>
-        <div size="auto">
+        <div size="auto" id="tooltips">
           2 of 3
         </div>
       </ion-col>
       <ion-col>
-        <div size="auto">
+        <div size="auto" id="tooltips">
           3 of 3
         </div>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <div size="auto">
+        <div size="auto" id="tooltips">
           1 of 2
       </div>
     </ion-col>
       <ion-col>
-        <div size="auto">
+        <div size="auto" id="tooltips">
           2 of 2
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div id="region">
+          Continental
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div size="auto" id="tooltips">
+          1 of 2
+      </div>
+    </ion-col>
+      <ion-col>
+        <div size="auto" id="tooltips">
+          2 of 2
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div size="auto" id="tooltips">
+          1 of 3
+        </div>
+      </ion-col>
+      <ion-col>
+        <div size="auto" id="tooltips">
+          2 of 3
+        </div>
+      </ion-col>
+      <ion-col>
+        <div size="auto" id="tooltips">
+          3 of 3
         </div>
       </ion-col>
     </ion-row>
