--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -83,7 +83,7 @@ ion-searchbar {
 
 ion-toolbar {
   --background: #0be6c8;
-  --border-color: #3880ff;
+  //--border-color: #3880ff;
   --border-style: solid;
   --border-width: 6px;
   --color: #0be6c8;
@@ -96,7 +96,7 @@ ion-toolbar {
 }
 
 ion-content {
-  --background: #000000;
+  //--background: #000000;
   --color: #3880ff;
   --keyboard-offset: 0px;
   --offset-bottom: 0px;
