--- a/src/app/category/category.page.scss
+++ b/src/app/category/category.page.scss
@@ -1,39 +1,51 @@
 ion-menu-button {
-    color: var(--ion-color-primary);
-  }
-  
-  #container {
-    text-align: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  
-  #container strong {
-    font-size: 20px;
-    line-height: 26px;
-  }
-  
-  #container p {
-    font-size: 16px;
-    line-height: 22px;
-    color: #8c8c8c;
-    margin: 0;
-  }
-  
-  #container a {
-    text-decoration: none;
-  }
-  
-  ion-content ion-toolbar {
-    --background: transparent;
-  }
-  
-  ion-col > div {
-    background-color: #f7f7f7;
-    border: solid 1px #ddd;
-    padding: 10px;
-  }
-  
+  color: var(--ion-color-primary);
+}
+#tooltips{
+  border-radius: 25px;
+  height: 30px;
+  text-align: center;
+  //border-style: solid;
+  //border-width: 1.4px;
+  //border-color: greenyellow;
+  background-color: #894c8d;
+}
+div {
+  padding-top: 6px;
+}
+#region {
+  //background-color: #8156b9;
+  border-style: solid;
+  border-width: 1.4px;
+  border-color: rgb(201, 88, 191);
+  padding: 6px;
+  text-align: center;
+  border-radius: 25px;
+  border-bottom: groove;
+  border-top: groove;
+  border-left: groove;
+  border-right: groove;
+  border-top-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+/* ion-col {
+    --ion-grid-column-padding: 5px;
+    --ion-grid-column-padding-xs: 5px;
+    --ion-grid-column-padding-sm: 5px;
+    --ion-grid-column-padding-md: 5px;
+    --ion-grid-column-padding-lg: 5px;
+    --ion-grid-column-padding-xl: 5px;
+    --ion-grid-columns: 50;
+  } */
+
+ion-content {
+  --background: #2ddae0;
+  //--color: #3880ff;
+  --keyboard-offset: 0px;
+  --offset-bottom: 0px;
+  --offset-top: 0px;
+  --padding-bottom: 0px;
+  --padding-end: 0px;
+  --padding-start: 0px;
+  --padding-top: 0px;
+}
