--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,6 +8,22 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+    <ion-slides mode="md" pager="md" scrollbar="md">
+        <ion-slide>
+            <div class="container">
+                <img src="../../assets/images/food-1.jpg" alt="served" style="width: 100%;" />
+                <div class="tag">
+                    <h1>Featured Product</h1>
+                </div>
+            </div>
+        </ion-slide>
+        <ion-slide>
+            <div class="container">
+                <img src="../../assets/images/food-2.jpg" alt="Pizza" style="width: 100%; height: 100%;" />
+            </div>
+        </ion-slide>
+    </ion-slides>
+    <!-- Fab Button -->
     <ion-fab vertical="bottom" horizontal="end" slot="fixed" style="padding-bottom: 60px;">
         <ion-fab-button color="secondary">
             <ion-icon name="person"></ion-icon>
@@ -18,49 +34,49 @@
             <ion-icon name="cart"></ion-icon>
         </ion-fab-button>
     </ion-fab>
-    <ion-header collapse="condense">
-        <ion-toolbar>
-            <ion-title size="large">Faven</ion-title>
-        </ion-toolbar>
-    </ion-header>
+    <!-- Card -->
+    <table>
+        <tr>
+            <td></td>
+            <ion-card href="fourth" target="_parent">
+                <ion-card-header>
+                    <ion-card-subtitle>Cuisine</ion-card-subtitle>
+                    <ion-card-title>Select a cuisine of your choice</ion-card-title>
+                </ion-card-header>
+                <ion-card-content style="color: brown;">
+                    <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
+                </ion-card-content>
+            </ion-card>
 
-    <ion-card href="fourth" target="_parent">
-        <ion-card-header>
-            <ion-card-subtitle>Cuisine</ion-card-subtitle>
-            <ion-card-title>Select a cuisine of your choice</ion-card-title>
-        </ion-card-header>
-        <ion-card-content style="color: brown;">
-            <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
-        </ion-card-content>
-    </ion-card>
+            <ion-card class="container-c1" href="third" target="_parent">
+                <ion-card-header class="container-card-header">
+                    <ion-card-subtitle>Cuisine</ion-card-subtitle>
+                    <ion-card-title>Select a cuisine of your choice</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
+                </ion-card-content>
+            </ion-card>
 
-    <ion-card href="third" target="_parent">
-        <ion-card-header>
-            <ion-card-subtitle>Cuisine</ion-card-subtitle>
-            <ion-card-title>Select a cuisine of your choice</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-            <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
-        </ion-card-content>
-    </ion-card>
+            <ion-card href="first" target="_parent">
+                <ion-card-header>
+                    <ion-card-subtitle>Cuisine</ion-card-subtitle>
+                    <ion-card-title>Select a cuisine of your choice</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
+                </ion-card-content>
+            </ion-card>
 
-    <ion-card href="first" target="_parent">
-        <ion-card-header>
-            <ion-card-subtitle>Cuisine</ion-card-subtitle>
-            <ion-card-title>Select a cuisine of your choice</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-            <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
-        </ion-card-content>
-    </ion-card>
-
-    <ion-card href="second" target="_parent">
-        <ion-card-header>
-            <ion-card-subtitle>Cuisine</ion-card-subtitle>
-            <ion-card-title>Select a cuisine of your choice</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-            <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
-        </ion-card-content>
-    </ion-card>
+            <ion-card href="second" target="_parent">
+                <ion-card-header>
+                    <ion-card-subtitle>Cuisine</ion-card-subtitle>
+                    <ion-card-title>Select a cuisine of your choice</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    <ion-img src="assets/images/background.jpg" style="padding-top: 5px;"></ion-img>
+                </ion-card-content>
+            </ion-card>
+        </tr>
+    </table>
 </ion-content>
