--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,108 +1,111 @@
 ion-menu-button {
-  color: var(--ion-color-primary);
+    color: var(--ion-color-primary);
 }
 
-#container {
-  text-align: left;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+
+/* Container */
+
+.container {
+    text-align: left;
+    position: relative;
+    max-width: 500px;
+    max-height: 400px;
+    object-fit: cover;
+    color: rgba(241, 236, 236, 0.116)
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.container-card {
+    height: 100px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-  color: #8c8c8c;
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.tag {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /* transform: translate(-50%, -50%); */
 }
 
 ion-content ion-toolbar {
-  --background: transparent;
+    --background: transparent;
 }
+
 ion-icon {
-  color: #ad24cf;
-  font-size: 24px;
+    color: #ad24cf;
+    font-size: 24px;
 }
 
 ion-fab-button {
-  --background: #c01687;
-  --background-activated: #3880ff;
-  --background-activated-opacity: 1;
-  --background-focused: #3880ff;
-  --background-focused-opacity: 1;
-  --background-hover: #49ff38;
-  --background-hover-opacity: 1;
-  --border-color: #ff1eda;
-  --border-radius: 40%;
-  --border-style: solid;
-  --border-width: 3px;
-  --box-shadow: 0px 0px;
-  --color: #ffffff;
-  --color-activated: #3880ff;
-  --color-focused: #3880ff;
-  --color-hover: #3880ff;
-  --padding-bottom: 4px;
-  --padding-end: 4px;
-  --padding-start: 4px;
-  --padding-top: 4px;
-  --ripple-color: #1e1e1e;
-  --transition: background-color 15ms linear;
+    --background: #c01687;
+    --background-activated: #3880ff;
+    --background-activated-opacity: 1;
+    --background-focused: #3880ff;
+    --background-focused-opacity: 1;
+    --background-hover: #49ff38;
+    --background-hover-opacity: 1;
+    --border-color: #ff1eda;
+    --border-radius: 40%;
+    --border-style: solid;
+    --border-width: 3px;
+    --box-shadow: 0px 0px;
+    --color: #ffffff;
+    --color-activated: #3880ff;
+    --color-focused: #3880ff;
+    --color-hover: #3880ff;
+    --padding-bottom: 4px;
+    --padding-end: 4px;
+    --padding-start: 4px;
+    --padding-top: 4px;
+    --ripple-color: #1e1e1e;
+    --transition: background-color 15ms linear;
 }
+
 ion-card {
-  --background: hsl(180, 100%, 50%);
-  --color: #56e41e;
+    --background: hsl(180, 100%, 50%);
+    --color: #56e41e;
 }
+
 ion-card-title {
-  --color: #000000;
+    --color: #000000;
 }
+
 ion-card-subtitle {
-  --color: #000000;
+    --color: #000000;
 }
+
 ion-searchbar {
-  --background: #0be6c8;
-  --cancel-button-color: #3880ff;
-  --clear-button-color: #3880ff;
-  --color: #2316db;
-  --icon-color: #3880ff;
-  --placeholder-color: #ec1919;
-  --placeholder-font-style: initial;
-  --placeholder-font-weight: 900;
-  --placeholder-opacity: 0.5;
+    --background: #0be6c8;
+    --cancel-button-color: #3880ff;
+    --clear-button-color: #3880ff;
+    --color: #2316db;
+    --icon-color: #3880ff;
+    --placeholder-color: #ec1919;
+    --placeholder-font-style: initial;
+    --placeholder-font-weight: 900;
+    --placeholder-opacity: 0.5;
 }
 
 ion-toolbar {
-  --background: #0be6c8;
-  //--border-color: #3880ff;
-  --border-style: solid;
-  --border-width: 6px;
-  --color: #0be6c8;
-  --min-height: 56px;
-  --opacity: 1;
-  --padding-bottom: 4px;
-  --padding-end: 0px;
-  --padding-start: 4px;
-  --padding-top: 4px;
+    --background: #0be6c8;
+    //--border-color: #3880ff;
+    --border-style: solid;
+    --border-width: 6px;
+    --color: #0be6c8;
+    --min-height: 56px;
+    --opacity: 1;
+    --padding-bottom: 4px;
+    --padding-end: 0px;
+    --padding-start: 4px;
+    --padding-top: 4px;
 }
 
 ion-content {
-  //--background: #000000;
-  --color: #3880ff;
-  --keyboard-offset: 0px;
-  --offset-bottom: 0px;
-  --offset-top: 0px;
-  --padding-bottom: 0px;
-  --padding-end: 0px;
-  --padding-start: 0px;
-  --padding-top: 0px;
+    //--background: #000000;
+    --color: #3880ff;
+    --keyboard-offset: 0px;
+    --offset-bottom: 0px;
+    --offset-top: 0px;
+    --padding-bottom: 0px;
+    --padding-end: 0px;
+    --padding-start: 0px;
+    --padding-top: 0px;
 }
